--- a/package.json
+++ b/package.json
@@ -22,12 +22,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "sql.js": "^1.10.3",
     "chalk": "^4.1.2",
     "chrono-node": "^2.7.0",
     "commander": "^11.1.0",
     "inquirer": "^8.2.6",
-    "natural": "^6.10.0"
+    "natural": "^6.10.0",
+    "sql.js": "^1.10.3"
   },
   "engines": {
     "node": ">=16.0.0"
