--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "boxen": "^5.1.2",
     "chalk": "^4.1.2",
     "chrono-node": "^2.7.0",
     "commander": "^11.1.0",
     "inquirer": "^8.2.6",
     "natural": "^6.10.0",
-    "sql.js": "^1.10.3"
+    "sql.js": "^1.10.3",
+    "update-notifier": "^5.1.0"
   },
   "engines": {
     "node": ">=16.0.0"
@@ -42,6 +44,7 @@
     "@types/inquirer": "^8.2.10",
     "@types/natural": "^5.1.5",
     "@types/node": "^20.11.0",
+    "@types/update-notifier": "^5.1.0",
     "typescript": "^5.3.3"
   },
   "publishConfig": {
